--- a/waif/src/app/components/dashboard/dashboard.component.html
+++ b/waif/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,27 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+    <div class="container">
+        <div class="menu-items">
+            <ul>
+                <li>
+                    <a routerLink="home" routerLinkActive="active-link">Home</a>
+                </li>
+                <li>
+                    <a routerLink="who-we-are" routerLinkActive="active-link">Who we are</a>
+                </li>
+                <li>
+                    <a routerLink="what-we-do" routerLinkActive="active-link">What we do</a>
+                </li>
+                <li>
+                    <a routerLink="gallery" routerLinkActive="active-link">Gallery</a>
+                </li>
+                <li>
+                    <a routerLink="blog" routerLinkActive="active-link">Blog</a>
+                </li>
+                <li>
+                    <a routerLink="contact" routerLinkActive="active-link">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<router-outlet></router-outlet>
